<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_activity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="20dp"
        app:layout_constraintBottom_toTopOf="@id/button_get_activity"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:visibility="gone">
        <androidx.cardview.widget.CardView
            android:id="@+id/activity_card"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            app:cardCornerRadius="20dp"
            app:cardElevation="10dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:background="#688F4D">
                <TextView
                    android:id="@+id/activity_text"
                    android:paddingTop="50dp"
                    android:paddingBottom="50dp"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textColor="#C7D1D0"
                    android:textSize="32sp"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>
                <ImageButton
                    android:id="@+id/activity_open_long_button"
                    android:layout_width="35dp"
                    android:layout_height="70dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@id/activity_text"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:src="@drawable/baseline_chevron_right_24"
                    android:tint="#C7D1D0"
                    android:scaleType="centerCrop"
                    android:background="#00FFFFFF"
                    android:contentDescription="@string/more_information_activity"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>
        <ImageButton
            android:id="@+id/favorite_button"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:scaleType="centerCrop"
            android:layout_marginTop="10dp"
            android:src="@drawable/baseline_favorite_border_24"
            android:tint="#14471E"
            android:backgroundTint="#00000000"
            android:contentDescription="@string/favorite"
            app:layout_constraintTop_toBottomOf="@id/activity_card"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/button_get_activity"
        android:layout_width="match_parent"
        android:layout_marginHorizontal="50dp"
        android:layout_height="70dp"
        android:text="@string/get_activity_button"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textSize="24sp"
        android:textColor="#FFFFFF"
        android:backgroundTint="#D96A00"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:cardCornerRadius="5dp"
        app:cardElevation="10dp"
        app:layout_constraintTop_toBottomOf="@id/layout_activity"/>

    <TextView
        android:id="@+id/unsuccessful_internet_connection_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/unsuccessful_internet_connection"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textSize="32sp"
        android:layout_margin="50dp"
        android:textAlignment="center"
        android:textStyle="bold"
        android:visibility="gone"/>

</androidx.constraintlayout.widget.ConstraintLayout>