<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FavoriteActivitiesFragment"
    android:background="#C7D1D0">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/long_activity_fragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#C7D1D0">

        <androidx.cardview.widget.CardView
            android:id="@+id/card_activity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#688F4D"
            app:cardCornerRadius="20dp"
            android:layout_margin="10dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/card_type">

            <TextView
                android:id="@+id/activity_text"
                android:layout_margin="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=""
                android:gravity="center_vertical"
                android:textColor="#C7D1D0"
                android:textSize="24sp"
                android:textStyle="bold"/>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/card_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#ED9A01"
            app:cardCornerRadius="20dp"
            android:layout_marginHorizontal="10dp"
            android:layout_marginVertical="5dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/card_activity"
            app:layout_constraintBottom_toTopOf="@id/card_participants">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">
                <TextView
                    android:layout_marginVertical="20dp"
                    android:layout_marginStart="30dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/type"
                    android:textColor="#FFFFFF"
                    android:textSize="24sp"
                    android:textStyle="bold"/>
                <TextView
                    android:id="@+id/type_text"
                    android:layout_marginVertical="20dp"
                    android:layout_marginStart="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textColor="#FFFFFF"
                    android:textSize="24sp"
                    android:textStyle="bold"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/card_participants"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#ED9A01"
            app:cardCornerRadius="20dp"
            android:layout_marginHorizontal="10dp"
            android:layout_marginVertical="5dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/card_type"
            app:layout_constraintBottom_toTopOf="@id/card_price">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">
                <TextView
                    android:layout_marginVertical="20dp"
                    android:layout_marginStart="30dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/participants"
                    android:textColor="#FFFFFF"
                    android:textSize="24sp"
                    android:textStyle="bold"/>
                <TextView
                    android:id="@+id/participants_text"
                    android:layout_marginVertical="20dp"
                    android:layout_marginStart="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textColor="#FFFFFF"
                    android:textSize="24sp"
                    android:textStyle="bold"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/card_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#ED9A01"
            app:cardCornerRadius="20dp"
            android:layout_marginHorizontal="10dp"
            android:layout_marginVertical="5dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/card_participants"
            app:layout_constraintBottom_toTopOf="@id/card_link">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">
                <TextView
                    android:layout_marginVertical="20dp"
                    android:layout_marginStart="30dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/price"
                    android:textColor="#FFFFFF"
                    android:textSize="24sp"
                    android:textStyle="bold"/>
                <TextView
                    android:id="@+id/price_text"
                    android:layout_marginVertical="20dp"
                    android:layout_marginStart="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textColor="#FFFFFF"
                    android:textSize="24sp"
                    android:textStyle="bold"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/card_link"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#ED9A01"
            app:cardCornerRadius="20dp"
            android:layout_marginHorizontal="10dp"
            android:layout_marginVertical="5dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/card_price"
            app:layout_constraintBottom_toTopOf="@id/card_accessibility">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">
                <TextView
                    android:layout_marginVertical="20dp"
                    android:layout_marginStart="30dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/link"
                    android:textColor="#FFFFFF"
                    android:textSize="24sp"
                    android:textStyle="bold"/>
                <TextView
                    android:id="@+id/link_text"
                    android:layout_marginVertical="20dp"
                    android:layout_marginStart="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textColor="#FFFFFF"
                    android:textSize="24sp"
                    android:textStyle="bold"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/card_accessibility"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#ED9A01"
            app:cardCornerRadius="20dp"
            android:layout_marginHorizontal="10dp"
            android:layout_marginVertical="5dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/card_link"
            app:layout_constraintBottom_toTopOf="@id/card_key">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">
                <TextView
                    android:layout_marginVertical="20dp"
                    android:layout_marginStart="30dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/accessibility"
                    android:textColor="#FFFFFF"
                    android:textSize="24sp"
                    android:textStyle="bold"/>
                <TextView
                    android:id="@+id/accessibility_text"
                    android:layout_marginVertical="20dp"
                    android:layout_marginStart="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textColor="#FFFFFF"
                    android:textSize="24sp"
                    android:textStyle="bold"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/card_key"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#D96A00"
            app:cardCornerRadius="20dp"
            android:layout_marginVertical="10dp"
            android:layout_marginHorizontal="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/card_accessibility">

            <LinearLayout
                android:layout_width="402dp"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="20dp"
                    android:layout_marginStart="30dp"
                    android:text="@string/key"
                    android:textColor="#FFFFFF"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/key_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="20dp"
                    android:layout_marginStart="10dp"
                    android:text=""
                    android:textColor="#FFFFFF"
                    android:textSize="24sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <ImageButton
            android:id="@+id/favorite_button"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:scaleType="centerCrop"
            android:src="@drawable/baseline_favorite_border_24"
            android:tint="#14471E"
            android:backgroundTint="#00000000"
            android:contentDescription="@string/favorite"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/card_key"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>